--- a/.github/workflows/main_studentssperformance3.yml
+++ b/.github/workflows/main_studentssperformance3.yml
@@ -53,7 +53,11 @@ jobs:
         with:
           name: python-app
           path: .
-          
+      # 🔐 LOGIN TO AZURE
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
